Fixed font spacing on Event page

--- a/EventApp/static/events/css/events.css
+++ b/EventApp/static/events/css/events.css
@@ -28,14 +28,10 @@ p {
 .colorlib-heading {
     font-size: 24px;
     margin-bottom: 6px;
-    font-weight: 600;
+    font-weight:bold;
     text-transform: uppercase;
-    letter-spacing: 5px;
-    line-height: 2;
     position: relative;
     color: #000;
-    font-family: 'Lato', sans-serif;
-
 }
 
 .colorlib-heading:after {
